--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-    publish = "dist/mecanica-frontend"
+    publish = "dist/mecanica-frontend/browser"
     command = "ng build"
 [[redirects]]
     from = "/*"
