--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,7 @@
               "outputHashing": "all",
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
+                  "replace": "src/environments/environment.development.ts",
                   "with": "src/environments/environment.ts"
                 }
               ]
