--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
     "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "^17.3.0",
+    "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
+    "@angular/compiler-cli": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
     "express": "^4.17.1",
     "ng-zorro-antd": "^17.4.1",
     "rxjs": "~7.8.0",
